# LiftConstruct

./: .gitignore  README.md
Constructor/: CMakeLists.txt  Constructor.qmlproject  qmlmodules  resources.qrc
Constructor/content/: App.qml  Screen01.ui.qml
Constructor/imports/: CMakeLists.txt
Constructor/imports/Constructor/: CMakeLists.txt  qmldir
Constructor/imports/Constructor/designer/: plugin.metainfo
Constructor/src/: CMakeLists.txt  import_qml_plugins.h  main.cpp  main.qml
Constructor/src/Controller/: CMakeLists.txt
Constructor/src/Controller/MainManager/: CMakeLists.txt  MainManager.cpp  MainManager.h  mainmanager.cpp  mainmanager.hpp
Constructor/src/Controller/PackageManager/: CMakeLists.txt  PackageManager.cpp  PackageManager.h  packagemanager.cpp  packagemanager.hpp
Constructor/src/Controller/PackageTemplateManager/: CMakeLists.txt  PackageTemplateManager.cpp  PackageTemplateManager.h  packagetemplatemanager.cpp  packagetemplatemanager.hpp
Constructor/src/Controller/ProjectManager/: CMakeLists.txt  projectmanager.cpp  projectmanager.hpp
Constructor/src/Controller/SectionManager/: CMakeLists.txt  SectionManager.cpp  SectionManager.h  sectionmanager.cpp  sectionmanager.hpp
Constructor/src/Controller/SequenceOfPackageManager/: CMakeLists.txt  SequenceOfPackageManager.cpp  SequenceOfPackageManager.h  sequenceofpackagemanager.cpp  sequenceofpackagemanager.hpp
Constructor/src/Controller/StationManager/: CMakeLists.txt  StationManager.h  stationmanager.cpp  stationmanager.hpp
Constructor/src/Controller/TestManager/: CMakeLists.txt  TestManager.cpp  TestManager.h  testmanager.cpp  testmanager.hpp
Constructor/src/Controller/ZonePackageManager/: CMakeLists.txt  ZonePackageManager.cpp  ZonePackageManager.h  zonepackagemanager.cpp  zonepackagemanager.hpp
Constructor/src/Model/: CMakeLists.txt
Constructor/src/Model/CRCModel/: CMakeLists.txt  CRCModel.cpp  CRCModel.h  crcmodel.cpp  crcmodel.hpp
Constructor/src/Model/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
Constructor/src/Model/PackageModel/: CMakeLists.txt  PackageModel.cpp  PackageModel.h  packagemodel.cpp  packagemodel.hpp
Constructor/src/Model/PackageTemplateModel/: CMakeLists.txt  PackageTemplateModel.cpp  PackageTemplateModel.h  packagetemplatemodel.cpp  packagetemplatemodel.hpp
Constructor/src/Model/SectionModel/: CMakeLists.txt  SectionModel.cpp  SectionModel.h  sectionmodel.cpp  sectionmodel.hpp
Constructor/src/Model/SequenceOfPackageModel/: CMakeLists.txt  SequenceOfPackageModel.cpp  SequenceOfPackageModel.h  sequenceofpackagemodel.cpp  sequenceofpackagemodel.hpp
Constructor/src/Model/StationModel/: CMakeLists.txt  StationManager.cpp  stationmodel.cpp  stationmodel.hpp
Constructor/src/Model/TestModel/: CMakeLists.txt  TestModel.cpp  TestModel.h  testmodel.cpp  testmodel.hpp
Constructor/src/Model/VirtualPortModel/: CMakeLists.txt  VirtualPortModel.cpp  VirtualPortModel.h  virtualportmodel.cpp  virtualportmodel.hpp
Constructor/src/Model/ZonePackageModel/: CMakeLists.txt  ZonePackageModel.cpp  ZonePackageModel.h  zonepackagemodel.cpp  zonepackagemodel.hpp
Constructor/src/View/: CMakeLists.txt
Constructor/src/View/ConstructMenu/: CMakeLists.txt  ConstructMenu.qml  constructview.cpp  constructview.hpp
Constructor/src/View/EmulatorMenu/: EmulatorMenu.qml
Constructor/src/View/PackageConstructMenu/: PCM_one_zone_rec.qml  PackageConstructMenu.qml
Constructor/src/View/PackageZoneMenu/: CMakeLists.txt  PackageZoneMenu.qml  PackageZoneView.cpp  PackageZoneView.h
Constructor/src/View/ProjectManager/: CMakeLists.txt  projectmanager.cpp  projectmanager.hpp
Constructor/src/View/SrcManager/: CMakeLists.txt  srcmanager.cpp  srcmanager.hpp
Constructor/src/View/StationMenu/: SM_AddSection.qml  SM_Package_View.qml  SM_one_zone_rec.qml  StationMenu.qml
Constructor/src/View/TestConstructMenu/: TCM_one_element.qml  TestConstructMenu.qml
Constructor/tests/ConstructorTest/: CMakeLists.txt
Constructor/tests/ConstructorTest/Controller/: CMakeLists.txt
Constructor/tests/ConstructorTest/Controller/PackageManager/: CMakeLists.txt  PackageManagerTest.cpp
Constructor/tests/ConstructorTest/Controller/PackageTemplateManager/: CMakeLists.txt  PackageTemplateManagerTest.cpp
Constructor/tests/ConstructorTest/Controller/SectionManager/: CMakeLists.txt  SectionManagerTest.cpp
Constructor/tests/ConstructorTest/Controller/SequenceOfPackageManager/: CMakeLists.txt  SequenceOfPackageManagerTest.cpp
Constructor/tests/ConstructorTest/Controller/StationManager/: CMakeLists.txt  StationManagerTest.cpp
Constructor/tests/ConstructorTest/Controller/TestManager/: CMakeLists.txt  TestManagerTest.cpp
Constructor/tests/ConstructorTest/Controller/ZonePackageManager/: CMakeLists.txt  ZonePackageManagerTest.cpp
Constructor/tests/ConstructorTest/Model/: CMakeLists.txt
Constructor/tests/ConstructorTest/Model/CRCModel/: CMakeLists.txt  CRCModelTest.cpp
Constructor/tests/ConstructorTest/Model/Logger/: CMakeLists.txt  LoggerTest.cpp
Constructor/tests/ConstructorTest/Model/PackageModel/: CMakeLists.txt  PackageModelTest.cpp
Constructor/tests/ConstructorTest/Model/PackageTemplateModel/: CMakeLists.txt  PackageTemplateModelTest.cpp
Constructor/tests/ConstructorTest/Model/SectionModel/: CMakeLists.txt  SectionModelTest.cpp
Constructor/tests/ConstructorTest/Model/SequenceOfPackageModel/: CMakeLists.txt  SequenceOfPackageModelTest.cpp
Constructor/tests/ConstructorTest/Model/StationModel/: CMakeLists.txt  StationModelTest.cpp
Constructor/tests/ConstructorTest/Model/TestModel/: CMakeLists.txt  TestModelTest.cpp
Constructor/tests/ConstructorTest/Model/VirtualPortModel/: CMakeLists.txt  VirtualPortModelTest.cpp
Constructor/tests/ConstructorTest/Model/ZonePackageModel/: CMakeLists.txt  ZonePackageModelTest.cpp
EmulatorClients/: CMakeLists.txt  EmulatorClients.qmlproject  qmlmodules
EmulatorClients/content/: App.qml  Screen01.ui.qml
EmulatorClients/imports/: CMakeLists.txt
EmulatorClients/imports/EmulatorClients/: CMakeLists.txt  qmldir
EmulatorClients/src/: import_qml_plugins.h
(+1 files in other folders)
